<resources>
    <string name="app_name">ChattingApp</string>
    <string name="text_user_name">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_email">email</string>
    <string name="text_password">password</string>
    <string name="text_signin">singin</string>
    <string name="text_signup">singup</string>
    <string name="welcome">welcome</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="text_email_message">Please write email</string>
    <string name="text_password_message">Please write password</string>
    <string name="text_error_message">Error Message :</string>
    <string name="text_message_username">Please write username</string>
    <string name="Text_users">Users</string>
    <string name="text_search_user_here">Search user here . . .</string>
    <string name="text_signout">Sign out</string>
    <string name="write_something">Please Write something</string>
    <string name="updated">Updated Successfully</string>
    <string name="wait_for_upload">Image is uploading, please wait. . .</string>
    <string name="upload">Uploading</string>
    <string name="write_message_here">write message here</string>
    <string name="write_message_first">please write a message first</string>
    <string name="pick_image">pick image</string>
    <string name="image_upload">image uploading please wait . . .</string>
    <string name="no_message">No Message</string>
    <string name="image_send">Image Send</string>
    <string name="image_view">image view</string>
    <string name="send_message">send message</string>
</resources>
