<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/_20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/_20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>